--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   text-align: center;
   padding: 20px;
-  min-height: 100vh; /* Ensure the App div takes up the full height of the viewport */
-  transition: background-color 0.3s; /* Add a smooth transition effect */
-  color:black;
+  min-height: 100vh;
+  transition: background-color 0.3s;
+  color:BLack;
 }
 
 .header {
@@ -11,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  /* color: white; Set header text color to white */
+  /* color: white; */
 }
 
 .title {
@@ -29,16 +29,23 @@
 .theme-toggle img {
   width: 24px;
   height: 24px;
-  background-color: white; /* Set a white background for the button's image */
-  border-radius: 50%; /* Optional: Add border radius for a circular appearance */
-  padding: 4px; /* Optional: Add padding to adjust the size of the button's image */
+  background-color: white;
+  border-radius: 50%;
+  padding: 4px;
+}
+
+.tile-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
+  align-items: center;
+  margin-top: 20px;
+  max-width: 100%; /* Add max-width to prevent exceeding container */
 }
 
 /* Dark theme styles */
 .dark {
-  background-color: black; /* Set background color to black */
+  background-color: black;
+  color:white;
 }
 
-.dark .header {
-  color: white; /* Set header text color to white in dark mode */
-}
