--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   padding: 20px;
   min-height: 100vh;
   transition: background-color 0.3s;
-  color:BLack;
+  color:Black;
 }
 
 .header {
@@ -11,7 +11,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  /* color: white; */
 }
 
 .title {
