Added dynamic tile shape change

--- a/src/Tile.css
+++ b/src/Tile.css
@@ -1,27 +1,36 @@
+.tile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--tile-color);
+  /* border-radius: 10px; */
+  padding: 20px;
+  min-width: var(--tile-width); /* Add min-width property */
+  min-height: var(--tile-height); /* Add min-height property */
+}
+.tile-name {
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--text-color);
+  margin-bottom: 10px;
+}
+
+.tile-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 18px;
+  color: var(--text-color);
+}
+
 .tile-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-content: flex-start;
-  gap: 2px;
+  gap: 10px;
 }
-
-.tile {
-    background-color: var(--tile-color);
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--text-color); /* Use variable for text color */
-    width: var(--tile-width); /* Use variable for tile width */
-    height: var(--tile-height); /* Use variable for tile height */
-    border-radius: var(--tile-border-radius); /* Use variable for border radius */
-  }
-  
-  .tile-name {
-    font-weight: bold;
-  }
-
-  .tile.dark {
-    color: white;
-  }
+.tile.dark {
+  color:white;
+}
