--- a/src/Tile.css
+++ b/src/Tile.css
@@ -1,19 +1,26 @@
 .tile {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: var(--tile-color);
-  /* border-radius: 10px; */
   padding: 20px;
-  min-width: var(--tile-width); /* Add min-width property */
-  min-height: var(--tile-height); /* Add min-height property */
+  width: var(--tile-width);
+  height: var(--tile-height);
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  perspective: 1000px; /* Add perspective for 3D transformation */
 }
+
 .tile-name {
   font-size: 24px;
   font-weight: bold;
   color: var(--text-color);
   margin-bottom: 10px;
+  transform: rotateY(
+    180deg
+  ); /* Add this property to ensure proper orientation */
 }
 
 .tile-content {
@@ -22,6 +29,7 @@
   white-space: nowrap;
   font-size: 18px;
   color: var(--text-color);
+  transform: rotateY(180deg);
 }
 
 .tile-container {
@@ -30,7 +38,34 @@
   justify-content: flex-start;
   align-content: flex-start;
   gap: 10px;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.tile-container.fade-out {
+  opacity: 0;
 }
 .tile.dark {
-  color:white;
+  color: white;
+}
+
+.tile.flipped {
+  transform: rotateY(180deg);
+}
+
+.side {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.front {
+  z-index: 2;
+}
+
+.back {
+  transform: rotateY(180deg);
 }
