--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   padding: 20px;
-  min-height: 100vh;
+  min-height: fit-content;
+  max-height: 150vh;
   transition: background-color 0.3s;
   color: Black;
 }
@@ -11,13 +12,12 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  margin-bottom: 20px;
+  padding: 20px;
 }
 
 .title {
   display: flex;
   align-items: center;
-  margin-bottom: 5px; /* Add margin-bottom for the desired gap */
   font-size: 30px;
   font-weight: bold;
 }
@@ -29,20 +29,12 @@
   outline: none;
 }
 
-.theme-toggle img {
-  width: 24px;
-  height: 24px;
-  background-color: white;
-  border-radius: 50%;
-  padding: 4px;
-}
-
 .tile-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   justify-items: center;
   align-items: center;
-  margin-top: 20px;
+  padding: 20px;
   max-width: 100%; /* Add max-width to prevent exceeding container */
 }
 
